# moaicli

./: .gitignore  0001-mods-to-mingw-w64-so-that-it-compiles-untz.patch  0002-mods-to-emscripten-cmake-so-that-it-works-with-moai.patch  Info.plist  LICENSE  README.md  README2.md  Rakefile  build_configuration.rb  index.html  moaicli.bat  moaicli.sh  params.json
config/: config.yml
hosts/android/: build_host.rb  config.yml.tt  host-info.yml
hosts/android/cmake/: CMakeLists.txt
hosts/glut/: build_host.rb  host-info.yml
hosts/glut/cmake/: CMakeLists.txt
hosts/html/: build_host.rb  build_host.rb.old  config.yml.tt  host-info.yml
hosts/html/cmake/: CMakeLists.txt
hosts/ios/: build_host.rb  config.yml.tt  host-info.yml
hosts/ios/cmake/: CMakeLists.txt
hosts/linux/: build_host.rb  host-info.yml
hosts/linux/cmake/: CMakeLists.txt
hosts/osx/: build_host.rb  host-info.yml
hosts/osx/cmake/: CMakeLists.txt
hosts/sdl/: build_host.rb  host-info.yml
hosts/sdl/cmake/: CMakeLists.txt
hosts/windows/: build_host.rb  config.yml.tt  host-info.yml
hosts/windows/cmake/: CMakeLists.txt
plugins/test/cmake/: CMakeLists.txt
plugins/test/src/: plugin.cpp
src/: Gemfile  moaicli.rb
src/commands/: build.rb  host_add.rb  host_list.rb  new.rb  sdk_update.rb  start.rb
src/lib/: app_config.rb  build_config.rb  builder_task.rb  host.rb  moai_builder.rb  moaicli.rb  project.rb
src/lib/builder/: android.rb  base.rb  desktop.rb  html.rb  ios.rb  linux.rb  mingw.rb  osx.rb  windows.rb
src/lib/helper/: android_helper.rb  android_sdk_helper.rb  ant_helper.rb  bzip2_helper.rb  cmake_helper.rb  download_helper.rb  emscripten_helper.rb  file_helper.rb  git_helper.rb  highline_helper.rb  hosts_helper.rb  ios_sdk_helper.rb  jdk_helper.rb  linux_helper.rb  mingw_helper.rb  moaisdk_helper.rb  os_helper.rb  osx_helper.rb  windows_helper.rb  zip_helper.rb
src/org/monkeybars/rawr/: Main.java  Path.java
templates/libmoai/: CMakeLists.txt.tt
templates/libmoai/plugins/: CMakeLists.txt.tt
templates/libmoai/plugins/src/: plugins.cpp.tt
templates/project/: moaicli.bat
templates/project/config/: config.yml.tt
templates/project/src/: main.lua
